--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
 			"problemMatcher": "$tsc-watch",
 			"isBackground": true,
 			"presentation": {
-				"reveal": "never"
+				"reveal": "always",
+				"panel":"shared"
 			},
 			"group": {
 				"kind": "build",
@@ -18,3 +19,4 @@
 		}
 	]
 }
+
