WIP: saving changes before checkout

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cardanovsc_debugger",
+  "name": "cardanovsc-debugger",
   "displayName": "cardanovsc_debugger",
   "description": "This is a debugger extension",
   "version": "0.0.1",
