--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    
+    "onDebugResolve:haskell",
+    "onLanguage:haskell"
   ],
   "main": "./out/extension.js",
   "contributes": {
