--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,11 @@
 		"outDir": "out",
         "resolveJsonModule": true,
         "esModuleInterop": true,
+		"moduleResolution": "node16",
+        "skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitAny": true,
+		"isolatedModules": true,
 
 		"lib": [
 			"ES2022"
@@ -12,12 +17,6 @@
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true, 
-
-		
-		  /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+	
 	}
 }
