--- a/test/test.cabal
+++ b/test/test.cabal
@@ -68,6 +68,7 @@ executable test
 
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.14.3.0
+                     , breakpoint
 
     -- Directories containing source files.
     hs-source-dirs:   app
