--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,8 @@
 			"name": "Run Extension",
 			"type": "extensionHost",
 			"request": "launch",
+			"activeFile": "${file}",
+			"trace": true,
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}"
 			],
