--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "Other"
   ],
   "capabilities": {
-  "supportsStepIn": true
-},
-
+    "supportsStepIn": true
+  },
   "activationEvents": [
     "onDebugResolve:haskell",
     "onLanguage:haskell"
@@ -109,7 +108,9 @@
     "@vscode/debugadapter": "^1.68.0",
     "@vscode/debugprotocol": "^1.68.0",
     "await-notify": "^1.0.1",
+    "axios": "^1.9.0",
     "lodash": "^4.17.21",
+    "lucid-cardano": "^0.10.11",
     "rxjs": "^7.8.2",
     "typescript": "^5.8.3",
     "vscode-debugadapter": "^1.51.0"
