--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,8 @@
 			"name": "Run Extension",
 			"type": "extensionHost",
 			"request": "launch",
+			"runtimeExecutable": "${file}",
+			"trace": true,
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}"
 			],
@@ -16,15 +18,6 @@
 				"${workspaceFolder}/out/**/*.js"
 			],
 			"preLaunchTask": "${defaultBuildTask}"
-		},
-		{
-			"type": "haskell",
-			"request": "launch",
-			"name": "Debug Cabal Project",
-			"program": "cabal repl --repl-no-load",
-			"activeFile": "${editor.document.fileName}",
-			"showIO": true,
-			"workspace": ""
 		}
 	]
 }
